- Bottom aligning cards - Fixed overflow bug

--- a/Solutions/tomorrowcomestoday.web/Content/css/tomorrowcomestoday.css
+++ b/Solutions/tomorrowcomestoday.web/Content/css/tomorrowcomestoday.css
@@ -11,13 +11,13 @@
     height: 100%;
 }
 
-/* Game Cards, modified from game-card Card inside BootPlus*/
+    /* Game Cards, modified from game-card Card inside BootPlus*/
 
 .card.game-card {
   position: relative;
   display: inline-block;
-  width: 130px;
-  height: 160px;
+  width: 100%;
+  height: 12em;
   padding-top: 0;
   margin-left: 20px;
   overflow: hidden;
@@ -29,7 +29,7 @@
 }
 
 .card.game-card .card-top {
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   display: inline-block;
@@ -47,7 +47,7 @@
 }
 
 .card.game-card .card-info {
-  position: absolute;
+  position: relative;
   top: 15px;
   width: 100%;
   height: 70px;
@@ -173,38 +173,6 @@
           box-sizing: border-box;
 }
 
-/* User profiles - based on http://bootsnipp.com/snippets/featured/dropdown-userlist-plus-administration */
-
-.user-row {
-    margin-bottom: 14px;
-}
-
-.user-row:last-child {
-    margin-bottom: 0;
-}
-
-.dropdown-user {
-    margin: 13px 0;
-    padding: 5px;
-    height: 100%;
-}
-
-.dropdown-user:hover {
-    cursor: pointer;
-}
-
-.table-user-information > tbody > tr {
-    border-top: 1px solid rgb(221, 221, 221);
-}
-
-.table-user-information > tbody > tr:first-child {
-    border-top: 0;
-}
-
-
-.table-user-information > tbody > tr > td {
-    border-top: 0;
-}
 
 /* chat new */
 
@@ -217,22 +185,14 @@
     position:relative;
    
 }
-html, body {height: 100%}
-
-.wrap {
-    height: 100%;
-    overflow: hidden;
-}
 
 .sidebar .sidebar-content{ 
-    height:100%;
-        width:100%;
+    height:80%;
+     width:100%;
     padding: 5px;
-        margin:0;
-        position:relative;
+     margin:0;
+    position:relative;
 }
-
-
 
 /* Chat box forked from - http://bootsnipp.com/snippets/featured/collapsible-chat-widget */
 .chat
@@ -274,7 +234,6 @@ html, body {height: 100%}
 .panel-scroll-body
 {
     overflow-y: scroll;
-    height: 90%;
 }
 
 .panel-body
